# pypapr

./: README.md  pyproject.toml
ppp/: __main__.py
