[tool.poetry]
name = "pypapr"
version = "0.1.0"
description = "A Python Painting Program!"
authors = ["Floozutter <floozutter@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
pyglet = "^1.4"
Pillow = "^6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
